# testing-c-code-with-system-calls

./: CMakeLists.txt  README.md  build_and_test.sh
include/: lib.h
src/: lib.c  main.c
test/: test_lib.cpp
